# zotero-cli

./: .gitignore  .pre-commit-config.yaml  AUR_VALIDATION.md  LICENSE  README.md  pyproject.toml  zotero-cli-0.1.0.r23.gc84a0c5-1-any.pkg.tar.zst
.github/workflows/: ci.yml  release.yml
packaging/arch/: PKGBUILD
packaging/arch/src/: zotero_sqlite_tool.py
src/zotero_sqlite_tool/: core.py
tests/: conftest.py  test_core.py
tests/fixtures/: build_fixtures.py  zotero-fixture-schema-variant.sqlite  zotero-fixture.sqlite
zotero-client-sqlite/: SKILL.md
zotero-client-sqlite/scripts/: zotero_sqlite_tool.py
