[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zotero-cli"
version = "0.1.0"
description = "Read-only CLI for querying a local Zotero SQLite database"
readme = "README.md"
requires-python = ">=3.11"

[dependency-groups]
dev = []

[project.scripts]
zotero-sqlite-tool = "zotero_sqlite_tool:main"

[tool.setuptools]
package-dir = {"" = "zotero-client-sqlite/scripts"}
py-modules = ["zotero_sqlite_tool"]
