[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zotero-cli"
version = "0.1.0"
description = "Read-only CLI for querying a local Zotero SQLite database"
readme = "README.md"
requires-python = ">=3.11"

[dependency-groups]
dev = []

[project.scripts]
zotero-sqlite-tool = "zotero_sqlite_tool.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
