[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zotero-cli"
version = "0.1.0"
description = "Read-only CLI for querying a local Zotero SQLite database"
readme = "README.md"
license = "0BSD"
requires-python = ">=3.13"

[dependency-groups]
dev = [
    "build>=1.2.2",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.13.1",
    "setuptools>=68",
    "wheel>=0.45.1",
]

[project.scripts]
zotero-sqlite-tool = "zotero_sqlite_tool.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
extend-exclude = ["packaging"]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

[tool.mypy]
python_version = "3.13"
files = ["src/zotero_sqlite_tool", "tests"]
strict = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
